# GifLib

./: README.md  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/volleycn/giflib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gifjni/: GifBitmapDecoderJNI.cpp  GifColor.h  GifFrame.cpp  GifFrame.h  GifFrameHandler.cpp  GifFrameHandler.h  GifFrameJNI.cpp  GifFrameJNI.h  GifHelpers.cpp  GifHelpers.h  GifRegistry.cpp  GifRegistry.h  GifStream.cpp  GifStream.h
app/src/main/java/com/volleycn/giflib/: MainActivity.java
app/src/main/java/com/volleycn/giflib/gif/: DGifDrawable.java  DGifDrawableResource.java  DGifFrame.java  DGifFrameDecoder.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/volleycn/giflib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
